kotlin-parser/src/test/semlang/validatorTests/fail/nameCollision6.sem

interface Bar {
  a(): Integer
}

interface Bar {
  b(): Integer
}
